# b24

./: .gitignore  Cargo.toml
src/: icoglobe.rs  main.rs  math_trait.rs  vert_data.rs
src/hsh/: bit_cell_map.rs  dash_trie.rs  hash_trie.rs  mod.rs  sub_hsh_alg.rs
src/hsh/id/: mod.rs  num_id.rs
src/hsh/str/: mod.rs  str_alg.rs  str_id.rs  str_obj.rs
src/prng/: fast_prng.rs  mod.rs
src/vec/: dec2.rs  dec3.rs  dec_vec.rs  mod.rs
