[package]
name = "b24"
version = "0.1.0"
edition = "2024"
authors = ["dchay <ChrusionPuroo@gmail.com>"]

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive", "derive_arbitrary"] }
bevy = "0.15.1"
bevy_egui = { version = "0.32.0", features = ["default", "serde", "immutable_ctx", ] }
bevy_panorbit_camera = { version = "0.22.0", features = ["bevy_egui"] }
bevy_rts_camera = "0.9.1"
bevy_serialization_extras = "0.8.0"
# bevy stat for rpg
bevy_stat_query = "0.2.0"
bigdecimal = { version = "0.4.7", features = ["default", "std", "serde"] }
dashmap = { version = "6.1.0", features = ["serde","arbitrary","inline","raw-api","rayon","typesize"] }
# bevy hexx utils
hexx = { version = "0.20.0", features = ["default","serde","bevy_reflect","packed"] }
moonshine-behavior = "0.1.6"
moonshine-check = "0.1.1"
moonshine-core = "0.2.2"
moonshine-kind = "0.2.1"
moonshine-object = "0.2.1"
moonshine-save = "0.3.10"
moonshine-spawn = "0.2.4"
moonshine-tag = "0.1.1"
moonshine-util = "0.2.6"
moonshine-view = "0.1.6"
nalgebra = "0.33.2"
num-traits = "0.2.19"
once_cell = { version = "1.20.2", features = ["default", "std", "alloc", "critical-section", "parking_lot", "race"] }
parking_lot = { version = "0.12.3", features = ["default","nightly","serde","arc_lock","owning_ref","send_guard"] }
rand = { version = "0.9.0-beta.3", features = ["default", "std", "small_rng", "serde", "nightly", "alloc", "std_rng", "unbiased", "simd_support"] }
rand_distr = { version = "0.5.0-beta.3", features = ["default", "std", "serde", "alloc", "std_math"] }
rayon = "1.10.0"
serde = { version = "1.0.217" , features = ["default", "std", "derive", "rc", "alloc", "serde_derive"] }
statrs = "0.18.0"

# max optimization
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3
